servicenow/6.11/modules/ROOT/pages/index.adoc
= ServiceNow Connector 6.11 - Mule 4
:page-aliases: connectors::servicenow/servicenow-about.adoc, connectors::servicenow/servicenow-to-use.adoc, connectors::servicenow/servicenow-connector.adoc



Anypoint Connector for ServiceNow (ServiceNow Connector) provides connections between Mule runtime engine (Mule) and ServiceNow apps.
Use the ServiceNow operations with the custom ServiceNow tables, along with any operations available through the installed plugins.

For compatibility information and fixed issues, see the ServiceNow Connector Release Notes.

== Before You Begin

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements in a Mule flow and global elements
* How to create a Mule app using Design Center or Anypoint Studio

Before creating an app, you must have access to the ServiceNow target resource and Anypoint Platform.

== Common Use Cases for the Connector

Common use cases for ServiceNow Connector include:

* *IT Service Management (ITSM)*
+
Sync ServiceNow data and extend IT service management (ITSM) capabilities to SaaS and on-premises applications, such as Salesforce, SAP, Workday, and Microsoft Dynamics 365, to help with data migration and replication, application integration, and consolidation. For example, you can bidirectionally sync workers data between Workday and ServiceNow or aggregate employees from Workday and users from ServiceNow into a CSV file.

* *Integrated Business Processes*
+
Fully integrate business processes across HR, legal, procurement, operations, marketing, and facilities departments.

* *Record Creation and Retrieval*
+
Transform enterprise IT by automating and managing IT service relationships to create a single system of records that you can retrieve.

For examples of these use cases, refer to xref:servicenow-connector-examples.adoc[ServiceNow Connector Examples].

== Audience

* New users, read:
** xref:servicenow-connector-studio.adoc[Using Anypoint Studio to Configure the Connector] to create your Mule app
* Advanced users, read:
** xref:servicenow-connector-xml-maven.adoc[XML and Maven Support]
** xref:servicenow-connector-examples.adoc[Examples], which provides one or more use cases for the connector

== Connection Types

The following authentication types are supported:

* Basic
* OAuth 2.0 Authorization Code

=== Limitations

* OAuth 2.0 Authorization Code authentication works only with the following versions of Mule:
** 4.1.5
** 4.2.1 and later
* Metadata does not work with OAuth 2.0 Authorization Code authentication.


== Use Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates
you can use as a starting point for your app, as well as examples that illustrate a complete solution.

* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-bidirectional-sync[Workday and ServiceNow Worker Bidirectional Sync]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-workerservicerequest-migration/[Workday Worker to ServiceNow Service Request Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-employee-aggregation/[Workday and ServiceNow Employee Aggregation]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-migration/[Workday to ServiceNow Service Worker Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker2servicerequest-broadcast/[Workday Worker to ServiceNow Service Request Broadcast]



== Next Step

After you complete the prerequisites and experiment with templates and examples, you are ready to create an app with xref:servicenow-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Anypoint Exchange to Discover Connectors, Templates, and Examples]
* xref:release-notes::connector/servicenow-connector-release-notes-mule-4.adoc[ServiceNow Connector Release Notes]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-servicenow-connector/[ServiceNow Connector on Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
